[gd_scene load_steps=4 format=2]

[ext_resource path="res://Figures/fimdejogobotoes.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Endgame.gd" type="Script" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
main_menu = "res://Scenes/MainMenu.tscn"
top_score = "res://Scenes/TopScores.tscn"
play_again = "res://Scenes/Levels/Level01.tscn"
vaccines = "res://Scenes/KnowVaccines.tscn"

[node name="background" type="Sprite" parent="."]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Menu principal" type="Button" parent="."]
margin_left = 77.0
margin_top = 87.0
margin_right = 164.0
margin_bottom = 114.0
custom_styles/focus = SubResource( 1 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Avaliar" type="Button" parent="."]
margin_left = 27.0
margin_top = 51.0
margin_right = 115.0
margin_bottom = 79.0
custom_styles/focus = SubResource( 1 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Melhores tempos" type="Button" parent="."]
margin_left = 126.0
margin_top = 51.0
margin_right = 216.0
margin_bottom = 80.0
custom_styles/focus = SubResource( 1 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Conheca as vacinas" type="Button" parent="."]
margin_left = 126.0
margin_top = 16.0
margin_right = 216.0
margin_bottom = 45.0
custom_styles/focus = SubResource( 1 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Jogar novamente" type="Button" parent="."]
margin_left = 27.0
margin_top = 16.0
margin_right = 115.0
margin_bottom = 44.0
custom_styles/focus = SubResource( 1 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="Menu principal" to="." method="_on_Menu_principal_pressed"]
[connection signal="pressed" from="Avaliar" to="." method="_on_Avaliar_pressed"]
[connection signal="pressed" from="Melhores tempos" to="." method="_on_Melhores_tempos_pressed"]
[connection signal="pressed" from="Conheca as vacinas" to="." method="_on_Conheca_as_vacinas_pressed"]
[connection signal="pressed" from="Jogar novamente" to="." method="_on_Jogar_novamente_pressed"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
